--- a/_config.yml
+++ b/_config.yml
@@ -24,3 +24,6 @@ version:          2.1.0
 
 github:
   repo:           https://github.com/rewberl/rewberl.github.io
+  
+# Gems
+gems: [jekyll-paginate]
