--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,19 @@
 # Dependencies
 markdown:         redcarpet
-highlighter:      pygments
+highlighter:      true
 
 # Permalinks
 permalink:        pretty
 
 # Setup
 title:            'Richard E.W. Berl'
-description:      'Cultural evolution.<br>Cultural transmission.<br>Data science.<br>Dad.'
+description:      'Cultural evolution.<br>Social learning.<br>Data science.<br>Dad.'
 url:              http://rewberl.github.io
 baseurl:          /
 
 author:
   name:           'Richard E.W. Berl'
   url:            http://rewberl.github.io
-
-paginate:         5
 
 # Custom vars
 version:          2.1.0
