--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 # Dependencies
 markdown:         kramdown
-highlighter:      true
+kramdown:
+  input: GFM
+highlighter:      rouge
 
 # Permalinks
 permalink:        pretty
