Update pages, CV, tag line

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 
 # Setup
 title:            'Richard E.W. Berl'
-description:      'Cultural evolution.<br>Social good.<br>Data science.<br>Dad.'
+description:      'Cultural evolution.<br>Biocultural conservation.<br>Social good.<br>Data science.<br>Dad.'
 url:              http://rewberl.github.io
 baseurl:          /
 
